# blackpill-usb-sha256

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format.sh  conanfile.py  gdb.txt  main.cpp  myactions.cpp  userdb.cpp  userdb.hpp
board/: CMakeLists.txt  main.c  stm32cubef4.cmake  syscalls.c  usbd_cdc_if.c  usbd_desc.c
board/include/: main.h  stm32f4xx_hal_conf.h
board/include/board/: usbd_cdc_if.h
board/src/: main.c  usbd_cdc_if.c  usbd_conf.c
board/startup/: CMakeLists.txt
cmake/: stm32cubef4.cmake
include/: FreeRTOSConfig.h  main.h  sha256sum.hpp  shell.h  static_buffer.hpp  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
linker/: STM32F411CEUX_FLASH.ld
os/: CMakeLists.txt
src/: main.c  shell.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
startup/: CMakeLists.txt
usb-sha256/: CMakeLists.txt  shell.cpp
usb-sha256/include/: sha256sum.hpp  static_buffer.hpp  types.hpp
usb-sha256/include/usb-sha256/: fast_buffer.hpp  hex_string.hpp  sha256sum.hpp  usb.hpp
usb-sha256/src/: sha256sum.cpp  shell.cpp  usb.cpp
